--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -220,7 +220,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="M5f-E1-EB4" kind="presentation" identifier="GoToWebViewController" id="WgC-nK-ctb"/>
+                                    <segue destination="MJU-ln-8jD" kind="presentation" id="AH8-hf-MTG"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -271,23 +271,59 @@
             </objects>
             <point key="canvasLocation" x="1897" y="581"/>
         </scene>
-        <!--WebView Controller-->
-        <scene sceneID="Oaj-es-hbq">
+        <!--WebVC-->
+        <scene sceneID="23b-eZ-5gs">
             <objects>
-                <viewController storyboardIdentifier="WebViewController" title="WebViewController" id="M5f-E1-EB4" userLabel="WebView Controller" customClass="WebViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
-                    <webView key="view" contentMode="scaleToFill" id="akh-LI-qXg">
+                <viewController storyboardIdentifier="WebVC" title="WebVC" id="MJU-ln-8jD" customClass="WebVC" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FtP-IR-pK1"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Vs-Qf-f4J"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jZ9-Mt-ikT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Amc-de-Qia">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QZs-Pm-YWd">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="done" id="iuf-1V-xwm">
+                                        <connections>
+                                            <action selector="dismissWebVC:" destination="MJU-ln-8jD" id="dcY-2m-c7a"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAk-le-VGl">
+                                <rect key="frame" x="0.0" y="44" width="600" height="512"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </webView>
+                        <constraints>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="leading" secondItem="jZ9-Mt-ikT" secondAttribute="leading" id="8rA-pw-hM7"/>
+                            <constraint firstItem="Amc-de-Qia" firstAttribute="top" secondItem="jZ9-Mt-ikT" secondAttribute="top" id="Bwb-UB-FrM"/>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="leading" secondItem="BAk-le-VGl" secondAttribute="leading" id="CQu-HG-DGZ"/>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="top" secondItem="BAk-le-VGl" secondAttribute="bottom" id="HW7-9l-Uyb"/>
+                            <constraint firstAttribute="trailing" secondItem="Amc-de-Qia" secondAttribute="trailing" id="HbV-tI-wP8"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="trailing" secondItem="Amc-de-Qia" secondAttribute="trailing" id="IXA-2P-gqN"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="leading" secondItem="Amc-de-Qia" secondAttribute="leading" id="Ohj-Vl-Nvr"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="trailing" secondItem="QZs-Pm-YWd" secondAttribute="trailing" id="Qyy-Jb-kMB"/>
+                            <constraint firstItem="QZs-Pm-YWd" firstAttribute="bottom" secondItem="3Vs-Qf-f4J" secondAttribute="top" id="V4f-eT-pZ4"/>
+                            <constraint firstItem="BAk-le-VGl" firstAttribute="top" secondItem="Amc-de-Qia" secondAttribute="bottom" id="uY7-bL-BiQ"/>
+                        </constraints>
+                    </view>
                     <connections>
-                        <outlet property="myWebView" destination="akh-LI-qXg" id="9fk-lv-H5A"/>
+                        <outlet property="searchBar" destination="Amc-de-Qia" id="f1u-uJ-qyQ"/>
+                        <outlet property="webView" destination="BAk-le-VGl" id="BSI-YE-Uwn"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tkv-mI-d1c" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <barButtonItem systemItem="done" id="SeG-qC-aAB"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="66X-K7-cKe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2613" y="567"/>
+            <point key="canvasLocation" x="2636" y="671"/>
         </scene>
         <!--LoginViewController-->
         <scene sceneID="cCf-5X-ZY1">
